# Chess_cpp

./: .gitignore  CMakeLists.txt  README.md  ai.cpp  ai.h  application.cpp  application.h  bitboard.cpp  bitboard.h  board.cpp  board.h  configmanager.cpp  configmanager.h  enums.h  game.cpp  game.h  globals.h  lab9_gra.cbp  lab9_gra.depend  lab9_gra.layout  main.cpp  mainwindow.cpp  moves.cpp  moves.h  transposition_table.cpp  transposition_table.h
framework/: widget.h
src/: CMakeLists.txt  ai.cpp  ai.h  assetmanager.cpp  assetmanager.h  bitboard.cpp  bitboard.h  enums.h  mainwindow.h  moves.cpp  moves.h
